# CPPLox

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: AstPrinter.hpp  Environment.hpp  Error.hpp  Expr.hpp  Interpreter.hpp  LoxCallable.hpp  LoxClass.hpp  LoxFunction.hpp  LoxInstance.hpp  LoxReturn.hpp  NativeFunctions.hpp  Parser.hpp  Resolver.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  Util.hpp
src/: AstPrinter.cpp  Environment.cpp  Error.cpp  Interpreter.cpp  LoxClass.cpp  LoxFunction.cpp  LoxInstance.cpp  NativeFunctions.cpp  Parser.cpp  Resolver.cpp  Scanner.cpp  Token.cpp
src/Tests/: AstPrinterTest.cpp
tool/: GenerateAst.cpp  ToolUtil.hpp  util.hpp
